--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_riverpod: ^2.5.1
   riverpod_annotation: ^2.3.5
   json_annotation: ^4.9.0
+  image_picker: ^1.1.1
 
 dev_dependencies:
   flutter_test:
