--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   riverpod_annotation: ^2.3.5
   json_annotation: ^4.9.0
   image_picker: ^1.1.1
+  transparent_image: ^2.0.1
 
 dev_dependencies:
   flutter_test:
